<resources>
    <string name="app_name">Caesar Naples Wiki</string>
    <string name="welcome">Markov chain generator by Caesar Naples</string>
    <string name="sentences">Generate sentences</string>
    <string name="paragraphs">Generate paragraphs</string>
    <string name="custom">Generate custom length</string>
    <string name="go">Go</string>
    <string name="source">View corpus</string>
    <string name="change">Change source</string>
    <string name="memory">History</string>

    <string name="number">100</string>
    <string name="length">Number of words</string>
    <string-array name="history">
        <item>Reveal yourself, you awful thing!</item>
        <item>Sub-Chapter : The final quarter of sophomore year</item>
        <item>I am not against poking. </item>
        <item>"So, about these pandas: should I be worried?"</item>
        <item>5. Hang yourself in your closet.</item>
    </string-array>
    <string name="delete">Delete history</string>
</resources>
