<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.caesarnapleswiki.caesarnapleswiki.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light"
        style="@android:style/Widget.ScrollView"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:elevation="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome"

                android:textSize="36sp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:background="@android:color/holo_orange_dark"
                android:textColor="@android:color/white"
                android:elevation="24dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_up_float"
                    android:id="@+id/imageButton10"
                    android:contentDescription="@string/go"
                    android:onClick="sentenceLayout"
                    />

                <TextView
                    android:text="@string/sentences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stext"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageButton10"
                    android:layout_toEndOf="@+id/imageButton10"
                    android:textSize="22sp"
                    android:elevation="12dp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/background_light" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_up_float"
                    android:id="@+id/imageButton7"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/go"
                    android:onClick="paragraphLayout"
                    />

                <TextView
                    android:text="@string/paragraphs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ptext"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageButton7"
                    android:layout_toEndOf="@+id/imageButton7"
                    android:textSize="22sp"
                    android:elevation="12dp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/background_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_up_float"
                    android:id="@+id/imageButton8"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/go"
                    android:onClick="customLayout"
                    />

                <TextView
                    android:text="@string/custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ctext"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageButton8"
                    android:layout_toEndOf="@+id/imageButton8"
                    android:textSize="22sp"
                    android:elevation="12dp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/background_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_up_float"
                    android:id="@+id/imageButton13"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/go"
                    android:onClick="historyLayout"
                    />

                <TextView
                    android:text="@string/memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/memory"

                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageButton13"
                    android:layout_toEndOf="@+id/imageButton13"
                    android:textSize="22sp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/background_light" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
